@@ -1,5 +1,5 @@
 //
-// "$Id: fl_shadow_box.cxx,v 1.4.2.3.2.4 2004/04/11 04:39:00 easysw Exp $"
+// "$Id$"
 //
 // Shadow box drawing routines for the Fast Light Tool Kit (FLTK).
 //
@@ -30,15 +30,15 @@
 
 static void fl_shadow_frame(int x, int y, int w, int h, Fl_Color c) {
   fl_color(FL_DARK3);
-  fl_rectf(x+BW, y+h,  w, BW);
-  fl_rectf(x+w,  y+BW, BW,  h);
+  fl_rectf(x+BW, y+h-BW,  w, BW);
+  fl_rectf(x+w-BW,  y+BW, BW,  h - BW);
   fl_color(c);
-  fl_rect(x,y,w,h);
+  fl_rect(x,y,w-BW,h-BW);
 }
 
 static void fl_shadow_box(int x, int y, int w, int h, Fl_Color c) {
   fl_color(c);
-  fl_rectf(x+1,y+1,w-2,h-2);
+  fl_rectf(x+1,y+1,w-2-BW,h-2-BW);
   fl_shadow_frame(x,y,w,h,FL_GRAY0);
 }
 
@@ -50,5 +50,5 @@ Fl_Boxtype fl_define_FL_SHADOW_BOX() {
 }
 
 //
-// End of "$Id: fl_shadow_box.cxx,v 1.4.2.3.2.4 2004/04/11 04:39:00 easysw Exp $".
+// End of "$Id$".
 //
