@@ -1,6 +1,8 @@
 CHANGES IN FLTK 1.1.7
 
 	- Documentation fixes (STR #648, STR #692)
+	- FL_SHADOW_BOX/FRAME drew outside of the bounding box
+	  (STR #694)
 	- Fl_Widget::copy_label(NULL) didn't work (STR #707)
 	- Fl_Choice now allows click selection like
 	  Fl_Menu_Button and Fl_Menubar (STR #706)
